Changes to user control paragraphs

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Portfolio</title>
+<title>Mariela's Portfolio</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="CSS/index.css">
@@ -35,7 +35,7 @@
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">Mariela's Portfolio
+    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">MARIELA LOPEZ'S PORTFOLIO
   </div>
 </div>
 
@@ -43,7 +43,7 @@
 <div class="w3-content w3-container w3-padding-64" id="about">
   <h3 class="w3-center">Projects and proof of concept</h3>
   <p class="w3-center"><em>Clever Fox Web Development</em></p>
-  <p>These are some past projects I've made using things like: HTML/CSS, JavaScript, SASS, etc. Other tools used in these projects are Visual Studio Code, Github and Netlify. This site is still in progress and I'll be posting more of my work soon. Feel free to also check out my company's website <a href="https://www.cleverfoxdevs.com/" title="CleverFoxDevs.com" target="_blank" class="w3-hover-text-green">Clever Fox Web Development</a></p>
+  <p>These are some past projects I've made using languages/frameworks like: HTML/CSS, JavaScript, SASS, etc. Other tools used in these projects are Visual Studio Code, Github and Netlify. This site is still in progress and I'll be posting more of my work soon. Feel free to also check out my company's website <a href="https://www.cleverfoxdevs.com/" title="CleverFoxDevs.com" target="_blank" class="w3-hover-text-green">Clever Fox Web Development</a></p>
 </div>
 
 <!-- Second Parallax Image with Portfolio Text -->
@@ -56,7 +56,7 @@
 <!-- Container (Portfolio Section) -->
 <div class="w3-content w3-container w3-padding-64" id="portfolio">
   <h3 class="w3-center">MY WORK</h3>
-  <p class="w3-center"><em>Here are some of my latest projects<br> Click on the images to open them in a new tab</em></p><br>
+  <p class="w3-center"><em>Here are some of my latest projects. More projects coming soon!<br> Click on the images to open them in a new tab</em></p><br>
 
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
@@ -76,29 +76,29 @@
     </div>
 
     <div class="w3-col m3">
-      <img src="/assets/wait.svg"style="width:100%" onclick="window.open('comingsoon.html')" alt="Coming Soon">
+      <img src="/assets/wait.svg"style="width:100%" onclick="window.open('comingsoon.html')" class="w3-hover-opacity" alt="Coming Soon">
       <p>More projects coming soon</p>
     </div>
   </div>
 
   <div class="w3-row-padding w3-center w3-section">
     <div class="w3-col m3">
-      <img src="/assets/loading.svg" style="width:100%" onclick="window.open('comingsoon.html')" alt="More coming soon">
+      <img src="/assets/loading.svg" style="width:100%" onclick="window.open('comingsoon.html')" class="w3-hover-opacity" alt="More coming soon">
       <p>More projects coming soon</p>
     </div>
 
     <div class="w3-col m3">
-      <img src="/assets/loading.svg" style="width:100%" onclick="window.open('comingsoon.html')" alt="More coming soon">
+      <img src="/assets/loading.svg" style="width:100%" onclick="window.open('comingsoon.html')" class="w3-hover-opacity" alt="More coming soon">
       <p>More projects coming soon</p>
     </div>
 
     <div class="w3-col m3">
-      <img src="/assets/loading.svg" style="width:100%" onclick="window.open('comingsoon.html')" alt="More coming soon">
+      <img src="/assets/loading.svg" style="width:100%" onclick="window.open('comingsoon.html')" class="w3-hover-opacity" alt="More coming soon">
       <p>More projects coming soon</p>
     </div>
 
     <div class="w3-col m3">
-      <img src="/assets/loading.svg" style="width:100%" onclick="window.open('comingsoon.html')" alt="More coming soon">
+      <img src="/assets/loading.svg" style="width:100%" onclick="window.open('comingsoon.html')" class="w3-hover-opacity" alt="More coming soon">
       <p>More projects coming soon</p>
     </div>
     <a href="/assets/Mariela Lopez Resume.docx" download="Download Resume">
@@ -135,9 +135,9 @@
     </div>
     <div class="w3-col m8 w3-panel">
       <div class="w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Fort Lauderdale, FL<br>
+        <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Fort Lauderdale, FL<br><br>
        
-        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: mariela@cleverfoxdevs.com<br>
+        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: mariela@cleverfoxdevs.com<br><br>
 
         <i class="fa fa-linkedin fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> <a href="https://www.linkedin.com/in/mariela-lopez-813034148/">LinkedIn Profile - Let's Connect!</a>
 
