Changes in the CSS

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </div>
 
 <!-- First Parallax Image with Logo Text -->
-<div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
+<div class="bgimg-1 w3-display-container " id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
     <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">MARIELA LOPEZ'S PORTFOLIO
   </div>
@@ -47,7 +47,7 @@
 </div>
 
 <!-- Second Parallax Image with Portfolio Text -->
-<div class="bgimg-2 w3-display-container w3-opacity-min">
+<div class="bgimg-2 w3-display-container ">
   <div class="w3-display-middle" style="white-space:nowrap;">
     <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">Portfolio
   </div>
@@ -102,7 +102,7 @@
       <p>More projects coming soon</p>
     </div>
     <a href="/assets/Mariela Lopez Resume.docx" download="Download Resume">
-    <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">Download My Resume</button>
+    <button class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity btn" style="margin-top:64px">Download My Resume</button>
   </a>
   </div>
 </div>
@@ -117,8 +117,8 @@
   </div>
 </div>
 
-<!-- Third Parallax Image with Portfolio Text -->
-<div class="bgimg-3 w3-display-container w3-opacity-min">
+<!-- Third Parallax Image with Portfolio Text - Removed w3-opacity-min -->
+<div class="bgimg-3 w3-display-container ">
   <div class="w3-display-middle" style="white-space:nowrap;">
     <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">Contact Me
   </div>
