--- a/userControl/index.html
+++ b/userControl/index.html
@@ -27,18 +27,21 @@
 </nav>
  <main>
       <img class="myimg" src="images/responsive.svg" alt="solar">
-      <img id="plustext" class="myicon" src="images/increase.png"  >
-      <img id="minustext" class="myicon" src="images/decrease.png"  >
+      <img id="plustext" class="myicon myicon2" src="images/increase.png"  >
+      <img id="minustext" class="myicon myicon2" src="images/decrease.png"  >
       <h2>Manipulate Font Size</h2>	 
       <p>One size does not fit all. This control allows the user to enlarge or reduce the font size without affecting the layout of the page. Giving users this option makes your website user-friendly, because it improves on readibility and it gives the user the power of deciding what works for them.  </p>
       
-      <img id="dark" class="myicon" src="images/dark2.png"  >
-	<img id="light" class="myicon" src="images/light2.png"  >
+      <img id="dark" class="myicon myicon2" src="images/dark2.png"  >
+	<img id="light" class="myicon myicon2" src="images/light2.png"  >
       <h2>Dark mode or Light Mode</h2>
       <p>There a lot of reasons why people prefer one over the other one. Some people with vision problems might prefer dark mode and some other 
             believe that light mode is better for proof reading tasks because of its positive contrast polarity. Personally, I enjoy everything in dark mode. 
       Specially when I'm coding late at night or really early in the morning. Whatever the reason, I love the idea of letting the user choose what is better for them.  </p>
 
+      <img id="serif" class="myicon myicon2" src="images/1font.png"  >
+	<img id="sans_serif" class="myicon myicon2" src="images/2font.png" >
+	<img id="monospace" class="myicon myicon2" src="images/3font.png"  >
       <h2>Where does it come from?</h2>
       <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It  has roots in a piece of classical Latin literature from 45 BC, making  it over 2000 years old. Richard McClintock, a Latin professor at  Hampden-Sydney College in Virginia, looked up one of the more obscure  Latin words, consectetur, from a Lorem Ipsum passage, and going through  the cites of the word in classical literature, discovered the  undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33  of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by  Cicero, written in 45 BC. This book is a treatise on the theory of  ethics, very popular during the Renaissance. The first line of Lorem  Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section  1.10.32.</p>
       <p>The standard chunk of Lorem Ipsum used since the 1500s is  reproduced below for those interested. Sections 1.10.32 and 1.10.33  from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in  their exact original form, accompanied by English versions from the 1914  translation by H. Rackham.</p>
