User Interface edit on paragraphs

--- a/userControl/index.html
+++ b/userControl/index.html
@@ -42,12 +42,16 @@
       <img id="serif" class="myicon myicon2" src="images/1font.png"  >
 	<img id="sans_serif" class="myicon myicon2" src="images/2font.png" >
 	<img id="monospace" class="myicon myicon2" src="images/3font.png"  >
-      <h2>Where does it come from?</h2>
-      <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It  has roots in a piece of classical Latin literature from 45 BC, making  it over 2000 years old. Richard McClintock, a Latin professor at  Hampden-Sydney College in Virginia, looked up one of the more obscure  Latin words, consectetur, from a Lorem Ipsum passage, and going through  the cites of the word in classical literature, discovered the  undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33  of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by  Cicero, written in 45 BC. This book is a treatise on the theory of  ethics, very popular during the Renaissance. The first line of Lorem  Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section  1.10.32.</p>
-      <p>The standard chunk of Lorem Ipsum used since the 1500s is  reproduced below for those interested. Sections 1.10.32 and 1.10.33  from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in  their exact original form, accompanied by English versions from the 1914  translation by H. Rackham.</p>
+      <h2>Change Font Type</h2>
+      <p>For this example I used 3 types of font style Serif, Sans Serif, and Monospace. Serifs are the fonts with little hooks. The most common one that everyone knows is Times New Roman. 
+            Serifs are a harder to read online and work better for printed materials. Sans Serif means no "serifs". These are the fonts without the little hooks and sans serifs are widely used online for most
+      most websites. Popular Sanserifs fonts are Arial, Geneva, Helvetica, Verdana, etc. Lastly, we have the monospace fonts. Programmers are very familiar with this type of fonts and if you have everyone
+      dabbled with command prompt then you know what this type of font looks like. Monospace fonts have the same width for each character like typewritters. Most known monospace font is courier. 
+      Other type sof fonts that I did not use for this projects are Fantasy/Display fonts and handwritting fonts</p>
+
+      <a href="https://fonts.google.com/">Check out Google Fonts to browse a large variety of fonts</a><br><br>
     
-      <h2>Where can I get some?</h2>
-      <p>There are many variations of passages of Lorem Ipsum available, but  the majority have suffered alteration in some form, by injected humour,  or randomised words which don't look even slightly believable. If you  are going to use a passage of Lorem Ipsum, you need to be sure there  isn't anything embarrassing hidden in the middle of text. All the Lorem  Ipsum generators on the Internet tend to repeat predefined chunks as  necessary, making this the first true generator on the Internet. It uses  a dictionary of over 200 Latin words, combined with a handful of model  sentence structures, to generate Lorem Ipsum which looks reasonable. The  generated Lorem Ipsum is therefore always free from repetition,  injected humour, or non-characteristic words etc.</p>
+     
 </main>
 </div>
 </body>
