--- a/userControl/index.html
+++ b/userControl/index.html
@@ -45,9 +45,9 @@
       <h2>Change Font Type</h2>
       <p>For this example I used 3 types of font style Serif, Sans Serif, and Monospace. Serifs are the fonts with little hooks. The most common one that everyone knows is Times New Roman. 
             Serifs are a harder to read online and work better for printed materials. Sans Serif means no "serifs". These are the fonts without the little hooks and sans serifs are widely used online for most
-      most websites. Popular Sanserifs fonts are Arial, Geneva, Helvetica, Verdana, etc. Lastly, we have the monospace fonts. Programmers are very familiar with this type of fonts and if you have everyone
-      dabbled with command prompt then you know what this type of font looks like. Monospace fonts have the same width for each character like typewritters. Most known monospace font is courier. 
-      Other type sof fonts that I did not use for this projects are Fantasy/Display fonts and handwritting fonts</p>
+      most websites. Popular Sans serifs fonts are Arial, Geneva, Helvetica, Verdana, etc. Lastly, we have the monospace fonts. Programmers are very familiar with this type of fonts and if you have everyone
+      dabbled with command prompt then you know what this type of font looks like. Monospace fonts have the same width for each character like typewritters. The most known monospace font is courier. 
+      There are other types of fonts that I did not use for this projects, they are Fantasy/Display fonts and handwritting fonts</p>
 
       <a href="https://fonts.google.com/">Check out Google Fonts to browse a large variety of fonts</a><br><br>
     
