Fixed CSS on User Control page

--- a/userControl/index.html
+++ b/userControl/index.html
@@ -23,7 +23,7 @@
 	<img id="light" class="myicon" src="images/light2.png"  >
 	<img id="serif" class="myicon" src="images/1font.png"  >
 	<img id="sans_serif" class="myicon" src="images/2font.png" >
-	<img id="monospace" class="myicon" src="images/3font.png"  >
+      <img id="monospace" class="myicon" src="images/3font.png"  >        
 </nav>
  <main>
       <img class="myimg" src="images/responsive.svg" alt="solar">
@@ -49,9 +49,17 @@
       dabbled with command prompt then you know what this type of font looks like. Monospace fonts have the same width for each character like typewritters. The most known monospace font is courier. 
       There are other types of fonts that I did not use for this projects, they are Fantasy/Display fonts and handwritting fonts</p>
 
-      <a href="https://fonts.google.com/">Check out Google Fonts to browse a large variety of fonts</a><br><br>
+      <a href="https://fonts.google.com/" target="_blank">Check out Google Fonts to browse a large variety of fonts</a><br><br>
+
+      <a href="/index.html">
+            <button class="button button5 center">Go Back Home</button>
+      </a>
+
+      <a href="https://www.cleverfoxdevs.com/" target="_blank">
+            <button class="button button5 center">Clever Fox Website</button>
+      </a>
+
     
-     
 </main>
 </div>
 </body>
